tests/fixtures/errors/invalid_unknown_only.puml
this is not a sequence diagram
